--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gosia i Sławek - 28 czerwca 2025</title>
+</head>
 <body>
-<h1>Gosia i Sławek - 28 czerwca 2025</h1>
-<p>Placeholder</p>
+  <h1>Zapraszamy na nasz ślub!</h1>
+  <p>Data: 28 czerwca 2025</p>
+  <p>Łódź, gmina Stęszew, powiat poznański</p>
 </body>
 </html>
