--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
+  <title>Gosia & Sławek - 28 czerwca 2025</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gosia i Sławek - 28 czerwca 2025</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Zapraszamy na nasz ślub!</h1>
-  <p>Data: 28 czerwca 2025</p>
-  <p>Łódź, gmina Stęszew, powiat poznański</p>
+  <header>
+    <h1>Gosia & Sławek</h1>
+    <p>Nasza ślubna strona</p>
+  </header>
+
+  <main>
+    <p>Witajcie! Tutaj znajdziecie wszystkie informacje dotyczące naszego wielkiego dnia.</p>
+    <p>Więcej szczegółów już wkrótce!</p>
+  </main>
+
+  <footer>
+    © 2025 Gosia i Sławek | Miłość unosi się w powietrzu 💕
+  </footer>
 </body>
 </html>
