--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Gosia & Sławek</h1>
-    <p>Nasza ślubna strona</p>
+    <p>Nasza ślubna strona 💒</p>
   </header>
 
   <main>
