--- a/index.html
+++ b/index.html
@@ -2,23 +2,41 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Gosia & Sławek - 28 czerwca 2025</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gosia & Sławek</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+    nav {
+      background-color: #f7d4d4;
+      padding: 1rem;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    nav a {
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
+    section {
+      padding: 3rem 1rem;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+    iframe {
+      width: 100%;
+      height: 300px;
+      border: 0;
+      margin-top: 1rem;
+      border-radius: 10px;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <h1>Gosia & Sławek</h1>
-    <p>Nasza ślubna strona 💒</p>
-  </header>
-
-  <main>
-    <p>Witajcie! Tutaj znajdziecie wszystkie informacje dotyczące naszego wielkiego dnia.</p>
-    <p>Więcej szczegółów już wkrótce!</p>
-  </main>
-
-  <footer>
-    © 2025 Gosia i Sławek | Miłość unosi się w powietrzu 💕
-  </footer>
-</body>
-</html>
