--- a/index.html
+++ b/index.html
@@ -40,3 +40,47 @@
 </head>
 <body>
   <header>
+    <h1>Gosia & Sławek</h1>
+    <p>Nasza ślubna strona</p>
+  </header>
+
+  <nav>
+    <a href="#usc">USC</a>
+    <a href="#dom">Uroczystość</a>
+    <a href="#harmonogram">Harmonogram</a>
+    <a href="#kontakt">Kontakt</a>
+  </nav>
+
+  <main>
+    <section id="usc">
+      <h2>Uroczystość w Urzędzie Stanu Cywilnego</h2>
+      <p>Adres: Dworcowa 3, 62-050 Mosina</p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2395.319782204724!2d16.845432676947537!3d52.24201915827407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4705b4d60f6361a7%3A0x83e6ab9168607e09!2sDworcowa%203%2C%2062-050%20Mosina!5e0!3m2!1spl!2spl!4v1715936587959!5m2!1spl!2spl" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+
+    <section id="dom">
+      <h2>Przyjęcie w naszym domu</h2>
+      <p>Adres: Zgodna 24, 62-061 Łódź (gmina Stęszew, powiat poznański)</p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2390.9634359415246!2d16.707170676952276!3d52.32047935747494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4705b0a11c45e4fd%3A0xcaa01f43e4a1c05!2sZgodna%2024%2C%2062-061%20%C5%81%C3%B3d%C5%BA%2C%20Polska!5e0!3m2!1spl!2spl!4v1715936815763!5m2!1spl!2spl" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+
+    <section id="harmonogram">
+      <h2>Harmonogram dnia</h2>
+      <p>Już wkrótce udostępnimy szczegółowy plan dnia. Zarezerwujcie sobie cały dzień – będzie pięknie! 💒</p>
+    </section>
+
+    <section id="kontakt">
+      <h2>Kontakt</h2>
+      <p>Jeśli masz pytania, zadzwoń do nas:</p>
+      <ul>
+        <li>Gosia: [numer telefonu]</li>
+        <li>Sławek: [numer telefonu]</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    © 2025 Gosia i Sławek | Dziękujemy, że jesteście z nami 💕
+  </footer>
+</body>
+</html>
