--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
     <h1>Gosia & Sławek ❤ 25 czerwca 2025</h1>
     <p>Pobieramy się!</p>
   </header>
-s
   <nav>
     <a href="#intro">Wstęp</a>
     <a href="#usc">USC</a>
@@ -100,12 +99,12 @@ s
   </nav>
 
   <section id="intro">
-    <h2><i data-lucide="heart"></i> Witajcie!</h2>
+    <h2>❤️ Witajcie!</h2>
     <p>To dla nas wyjątkowy moment i jesteśmy szczęśliwi, że chcecie być jego częścią. Poniżej znajdziecie wszystkie niezbędne informacje, by razem z nami przeżyć ten dzień z uśmiechem!</p>
   </section>
 
   <section id="usc">
-    <h2><i data-lucide="landmark"></i> Urząd Stanu Cywilnego</h2>
+    <h2>🏛️ Urząd Stanu Cywilnego</h2>
     <p>Dworcowa 3, 62-050 Mosina</p></br>
 <p><i data-lucide="circle-alert"></i></p>
 <p>Uwaga! Po wpisaniu z ręki w Mapy Google 'USC Mosina' nawigacja ustawia pinezkę na inny budynek USC w Mosinie przy Rynku, w którym nie ma Sali Ślubów, nie jedźcie tam! Wpisywanie 'Dworcowa 3' też wyświetla źle. Zamiast tego, wpisujcie 'Sala Ślubów' (osobiście dodawałam tę pinezkę ;D), która jest minutę od stacji kolejowej. Na przeciwko jest parking, drugi większy jest też dworcu. Wygodnie też przyjechać pociągiem z Poznania.</p> 
@@ -113,58 +112,48 @@ s
   </section>
 
   <section id="dom">
-    <h2><i data-lucide="home"></i> Uroczystość</h2>
+    <h2>🏠 Uroczystość</h2>
     <p>Zgodna 24, 62-061 Łódź, gmina Stęszew</p>
     <iframe src="https://www.google.com/maps?q=Zgodna+24,+Stęszew&output=embed"></iframe>
   </section>
 
   <section id="harmonogram">
-    <h2><i data-lucide="clock"></i> Harmonogram</h2>
+    <h2>🕒 Harmonogram</h2>
     <p>14:00 Ceremonia w Urzędzie</p>
     <p>14:45 Obiad dla rodziny w Pałacu Będlewo. Goście w tym czasie mogą udać się już do nas (będzie czekał ciepły posiłek i zimne napoje %), przejść się nad jezioro albo zameldować się w hotelu!</p>
     <p>17:00 Oficjalny start!</p>
   </section>
 
   <section id="kontakt">
-    <h2><i data-lucide="phone"></i> Kontakt</h2>
+    <h2>📱 Kontakt</h2>
     <p>Gosia: 730 285 759</p>
     <p>Sławek: 660 403 343</p>
   </section>
 
   <section id="dresscode">
-    <h2><i data-lucide="shirt"></i> Dress Code</h2>
+    <h2>🪭 Dress Code</h2>
     <p>Luźny i wygodny – najważniejsze, żebyście czuli się dobrze!</p>
   </section>
 
   <section id="praktyczne">
-    <h2><i data-lucide="info"></i> Informacje praktyczne</h2>
-    <ul>
-      <li>Parking dostępny przy obu lokalizacjach</li>
-      <li>Na miejscu zapewniamy napoje, jedzenie i dużo miłości 💖</li>
-      <li>W razie pytań – dzwońcie śmiało!</li>
+    <h2>ℹ️ Informacje praktyczne</h2>
+     <p>Nasz pies lubi uciekać, dajcie znać jak go zobaczycie za płotem i pamiętajcie aby zamykać bramę za sobą! 🐾</p>
     </ul>
   </section>
 
   <section id="hotel">
-    <h2><i data-lucide="bed"></i> Hotel</h2>
+    <h2>🛏️ Hotel</h2>
     <p>Dla gości spoza Poznania przewidziany jest hotel, oddalony o 15 minut spacerem od naszego domu.</p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4886.074978599512!2d16.746547798967892!3d52.24270270743068!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47044d0ca63c2a19%3A0xfe8d05ff6eb83293!2sSzablewski.%20Hotel!5e0!3m2!1spl!2spl!4v1747496659367!5m2!1spl!2spl"</iframe>
   </section>
 
   <section id="poprawiny">
-    <h2><i data-lucide="party-popper"></i> Poprawiny</h2>
+    <h2>🎉 Poprawiny</h2>
     <p>Następnego dnia apraszamy na poprawiny od godziny 11:00 – będzie grill!</p>
   </section>
 
   <footer>
     © 2025 Gosia & Sławek. Stworzone z miłością.
   </footer>
-
-  <script type="module">
-    import { createIcons, icons } from 'https://unpkg.com/lucide@latest/dist/esm/lucide.js';
-    window.addEventListener('DOMContentLoaded', () => {
-      createIcons({ icons });
-    });
-  </script>
 </body>
 </html>
