--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 </head>
 <body>
   <header>
-    <h1>Gosia & Sławek ❤ 25 czerwca 2025</h1>
+    <h1>Gosia ❤ Sławek</h1>
+    <h2>25 czerwca 2025</h2>
     <p>Pobieramy się!</p>
   </header>
   <nav>
