--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 
       <div id="kontakt" class="section-card mb-4">
         <h2>📱 Kontakt</h2>
-        <p>Gosia: 730 285 759</p>
-        <p>Sławek: 660403343</p>
+        <p>Gosia: 730 285 759</br>
+        Sławek: 660 403 343</p>
       </div>
 
       <div id="poprawiny" class="section-card mb-4">
