--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h2>🏛️ Urząd Stanu Cywilnego</h2>
         <p>Dworcowa 3, 62-050 Mosina</p>
         <div class="alert alert-warning mt-3">
-          <strong>Uwaga!</strong> Po wpisaniu z ręki w Mapy Google 'USC Mosina' nawigacja ustawia pinezkę na inny budynek USC w Mosinie przy Rynku, w którym nie ma Sali Ślubów, nie jedźcie tam! Wpisywanie 'Dworcowa 3' też wyświetla źle. Zamiast tego, wpisujcie 'Sala Ślubów' (osobiście dodawałam tę pinezkę ;D), która jest minutę od stacji kolejowej. Na przeciwko jest parking, drugi większy jest też dworcu. Wygodnie też przyjechać pociągiem z Poznania.
+          <strong>Uwaga!</strong> Po wpisaniu z ręki w Mapy Google 'USC Mosina' nawigacja ustawia pinezkę na inny budynek USC w Mosinie przy Rynku, w którym nie ma Sali Ślubów, nie jedźcie tam! Wpisywanie 'Dworcowa 3' też wyświetla źle. Zamiast tego, wpisujcie 'Sala Ślubów' (osobiście dodawałam tę pinezkę ;D), która jest minutę od stacji kolejowej. Na przeciwko jest parking, drugi większy jest też dworcu. Wygodnie też przyjechać pociągiem z Poznania.</br>Mapka poniżej na ten moment pokazuje dobre miejsce!
         </div>
         <iframe class="mt-3 rounded" src="https://www.google.com/maps?q=Dworcowa+3,+Mosina&output=embed" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
